# learn-rust-be

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
01-introduction/: README.md
02-basic-server/: README.md
03-using-framework-for-backend/: README.md
04-routing-and-requests/: README.md
05-handling-data/: README.md
06-databases/: README.md
06-databases/db-demo/: .env.example  Cargo.toml  README.md
06-databases/db-demo/migrations/: 20250202035633_create_products_table.sql
06-databases/db-demo/src/: config.rs  main.rs
06-databases/db-demo/src/db/: mod.rs  products.rs
06-databases/db-demo/src/handlers/: mod.rs  products.rs
06-databases/db-demo/src/models/: mod.rs  product.rs
07-authentication-and-security/: README.md
07-authentication-and-security/auth-demo/: .env.example  Cargo.toml  README.md
07-authentication-and-security/auth-demo/migrations/: 20250202051830_create_users_table.sql
07-authentication-and-security/auth-demo/src/: config.rs  main.rs
07-authentication-and-security/auth-demo/src/db/: users.rs
07-authentication-and-security/auth-demo/src/handlers/: auth.rs
07-authentication-and-security/auth-demo/src/middleware/: auth.rs
07-authentication-and-security/auth-demo/src/models/: user.rs
08-asynchronous-programming-and-concurrency/: README.md
08-asynchronous-programming-and-concurrency/async-demo/: Cargo.toml  README.md
08-asynchronous-programming-and-concurrency/async-demo/src/: main.rs
08-asynchronous-programming-and-concurrency/async-demo/src/handlers/: tasks.rs
08-asynchronous-programming-and-concurrency/async-demo/src/models/: task.rs
08-asynchronous-programming-and-concurrency/async-demo/src/services/: task_processor.rs
09-testing-and-observability/: README.md
09-testing-and-observability/testing-demo/: Cargo.toml  README.md
09-testing-and-observability/testing-demo/src/: main.rs
09-testing-and-observability/testing-demo/src/handlers/: users.rs
09-testing-and-observability/testing-demo/src/models/: user.rs
09-testing-and-observability/testing-demo/src/tests/: user_tests.rs
10-deployment/: README.md
(+19 files in other folders)
